# part-4

./: 01. Introduction to Neural Networks.ipynb  02. Exercise - QSAR Toxicity.ipynb  03. Deep Learning.ipynb  04. Exercise - Spam Detection - sol.ipynb  04. Exercise - Spam Detection.ipynb  05. Image Classification via CNNs.ipynb  06. A Predictive Maintenance Case Study.ipynb  07. Case Study - RUL Regression.ipynb  08. Case Study - Policy Threshold Calibration.ipynb  09. Case Study - Classification based Maintenance Policy.ipynb  10. Case Study - Autoencoders for Anomaly Detection.ipynb  lr_model.keras  mlp_model.keras  pyproject.toml  requirements_dev.txt
