[tool.poetry]
name = "part-4"
version = "0.1.0"
description = ""
authors = ["Michele Lombardi <michele.lombardi2@unibo.it>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
notebook = "6.5.6"
tensorflow = "^2.16.1"
pydot = "^2.0.0"
rise = "^5.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
